2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl: Updated version number to sync with 1.6.1
	* fileutil.man: release.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Cleaning up after Aaron. Updated the test
	  filetype-1.12 to look for the extended return value of fileType
	  when applied to jpeg images. The last checkin changed this, but
	  the test was not updated as well, most likely not even
	  run. Found and corrected during release preparation and testing.

2004-05-11  Aaron Faupell <afaupell@users.sourceforge.net>

	* fileutil.tcl: updated the jpeg test to recognize exif format

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: The tempdir tests used advanced test syntax not
	  available before 8.4 (IIRC). Not useable for 8.2. Ditto the lot of
	  the install tests also used 8.3 and 8.4 features. Straightened
	  the bad syntax out (killed the tests), and added proper
	  constraints to the tests.

	* fileutil.tcl: Ooops. fileutil is certified for usage with Tcl
	  8.2, there is no [file normalize] before 8.4. Made the usage
	  (See 2004-02-03) conditional.

2004-02-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.test: Modified the tests a bit to use glob characters
	  in file names to check that the code is robust against that too.

	  See http://bugs.activestate.com/show_bug.cgi?id=29491

2004-02-03  Andreas Kupries  <andreask@activestate.com>

	* fileutil.tcl (tempdir, tempfile): Now [file normalize]'ing the
	  results of these two commands. More windows friendly.

2004-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* fileutil.tcl (fileutil::find): Fixed bug in handling a single
	  file as base directory: The initial list was not set up as a