@@ -28,10 +28,12 @@ file, from most general (eg, "binary" or "text") to most specific (eg,
 "gif").  For example, the return value for a GIF file would be "binary
 graphic gif".  The command will detect the following types of files:
 directory, empty, binary, text, script (with interpreter), executable
-elf, graphic gif, graphic jpeg, graphic png, graphic tiff, html,
+elf, executable dos, executable ne, executable pe, graphic gif,
+graphic jpeg, graphic png, graphic tiff, graphic bitmap, html,
 xml (with doctype if available), message pgp, binary pdf, text ps,
 text eps, binary gravity_wave_data_frame, compressed bzip,
-compressed gzip, and link.
+compressed gzip, compressed zip, compressed tar, audio wave,
+audio mpeg, and link.
 
 
 [call [cmd ::fileutil::find] [opt "[arg basedir] [opt [arg filtercmd]]"]]
