@@ -1,3 +1,8 @@
+2004-05-30  Aaron Faupell <afaupell@users.sourceforge.net>
+
+	* fileutil.tcl: added tests for dos executables, tar, zip, bmp, wav, and mp3 to fileType
+	* fileutil.man: updated to reflect new types for fileType
+
 2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* fileutil.tcl: Updated version number to sync with 1.6.1
